--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix Clone Using html and css</title>
+    <link rel="icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2023.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,11 +28,11 @@
                     </div>
                     <div class="content">
                     <h1 class="home-head">Unlimited movies, TV shows and more</h1>
-                    <p class="p1">Watch anuwhere. Cancel anytime.</p>
-                    <p class="p2">Ready to watch? Enter your email to create or restart your membership.</p>
+                    <p class="p1">Watch anywhere. Cancel anytime.</p>
+                    <p class="p2">Ready to watch? Enter your email or mobile number to create or restart your membership.</p>
                     <div class="registration">
                         <input type="email" placeholder="Email address">
-                        <button class="get-started">Get Started ></button>
+                        <button class="get-started">Get Started <span>&#10095;</span></button>
                     </div>
                     </div>
                 </div>
@@ -140,7 +141,7 @@
                 <div class="ready-to-watch"><p class="p2" style="margin-top: 50px;">Ready to watch? Enter your email or mobile number to create or restart your membership.</p></div>
                     <div class="registration">
                         <input type="email" placeholder="Email address">
-                        <button class="get-started">Get Started ></button>
+                        <button class="get-started">Get Started <span>&#10095;</span></button>
                     </div>
             </div>
         </div>
